<resources>
    <string name="app_name">American Football</string>
    <string name="button_reset">Reset</string>
    <string name="team_a_text">Team A</string>
    <string name="team_b_text">Team B</string>
    <string name="team_score_text">0</string>
    <string name="team_button_six_text">+6 Points</string>
    <string name="team_button_three_text">+3 Points</string>
    <string name="team_button_two_text">+2 Points</string>
    <string name="team_button_extra_text">Extra Point</string>
    <string name="todo">TODO</string>
</resources>
